--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "module": "ESNext", // or "ES6" to ensure ESM output
-    "target": "ESNext", // Adjust based on your environment needs
+    "module": "ESNext", 
+    "target": "ESNext",
     "esModuleInterop": true,
     "moduleResolution": "node"
   },
